Fix hundreds of compiler warnings. 2267 remain, using Java 14.
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@20304 b29ace70-8910-0410-8dcc-aa2fc6433167